# NexusAgent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ALL_TOOLS.md  BACKLOG.md  CHANGELOG.md  CODEBASE_MAP.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  LLXPRT.md  Makefile  README.md  SECURITY.md  SESSION_STATE.md  SUPPORT.md  app.py  docker-compose.dev.yml  docker-compose.yml  e2e_api_verification.py  findings.md  main.py  mkdocs.yml  nexus.db  nexusagent.service  progress.md  project.json  pyproject.toml  reverse_audit_findings.md  review.md  task_plan.md  test.db-shm  test.db-wal  test_app.py  test_example.py  (+6 more)
.Jules/: palette.md
.gemini/: settings.json
.github/agents/: code_review_agent.agent.md  security_specialist.agent.md
.github/workflows/: ci.yml  migration-guard.yml
.hermes/: handoff-2026-06-09.md
.hermes/plans/: 2026-06-11-codebase-cleanup-plan.md  2026-06-11-reorg-sprint-plan.md  2026-07-18-refactoring-master-plan.md  2026-07-18-tui-parity-sprint.md
.kilo/: kilo.json
.llxprt/: LLXPRT.md  review_plan.md  review_spec.md
.reports/: codemap-diff.txt
.serena/: project.yml
.vtcode/: README.md  tool-policy.json
.vtcode/history/: session-nexusagent-20260602T1248.memory.json
.vtcode/logs/: trajectory.jsonl
.vtcode/terminals/: INDEX.md
api_e2e_project/: app.py  test_e2e.py
codemaps/: architecture.md  backend.md  data.md  frontend.md
config/: NEXUS.md  nexusagent.yaml  secrets-sync.yaml  system_prompt.txt
docs/: AUDIT_REPORT.md  BUG_ANALYSIS_SESSION_WEBSOCKET.md  CLIENT_SERVER_ARCHITECTURE_ANALYSIS.md  CODEBASE_INDEX.md  CODEBASE_MAP.md  CODEBASE_MAP_CORE.md  CODEBASE_MAP_TOOLS_API.md  CODEBASE_MAP_TUI.md  CODEBASE_REVIEW_2026_06_22.md  CODE_REVIEW_COMPREHENSIVE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  DEEPAGENTS_COMPARISON_AUDIT.md  DOC_COMPLIANCE.md  EXECUTION_SUMMARY.md  EXTRACTIONS_LOG.md  GEMINI_NATIVE_TOOLS.md  HIGH_MODE_AUDIT_SUMMARY.md  JULES.HANDOFF.md  LLM_PROVIDER_SDK_AUDIT.md  MEMORY_ARCHITECTURE.md  MEMORY_IMPL_PLAN.md  MEMORY_SYSTEM_ANALYSIS.md  MEMORY_SYSTEM_COMPREHENSIVE_ANALYSIS.md  MISTRALAI.HANDOFF.md  PLAN.md  REFACTORING_PLAN.md  RESEARCH_FEATURE_PARITY_ARCHITECTURE.md  RESEARCH_FEATURE_PARITY_CAPABILITIES.md  RESEARCH_TUI_AESTHETICS_VISUAL.md  RESEARCH_TUI_BEST_PRACTICES.md  RUNBOOK.md  SECRETS_SYNC.md  SEMANTIC_INDEX.md  SESSION_STATE.md  STATE.md  TODO-NEXT-PHASE.md  TOOLS.md  TUI_AUDIT.md  TUI_OVERHAUL_SPEC.md  (+11 more)
docs/.jules/: BUDGET_SAFETY.md  FILE_CHANGE_VERIFICATION.md  MEMORIES.md  SESSION_START.md  TASK.md
docs/ROADMAP/: index.html
docs/adrs/: 0001-telemetry-system-design.md  0002-project-structure-build-modes.md  0003-project-branding-config.md  0004-documentation-standards.md  0005-tui-refactoring.md  0006-memory-session-integration.md  0007-context-compression.md  0008-cross-session-memory.md  0009-runtime-lifecycle-model.md  0010-runtime-dependency-injection.md  0011-phase-1-adapter-strategy.md  index.md
docs/api/: agent.md  bus.md  models.md  registry.md  server.md  tools.md
docs/architecture/: current-state.md  multi-agent.md  overview.md  phase-1-gap-analysis.md  policies.md  target-state.md  tools.md
docs/archive/: README.md  code-changes-summary-2026-06-05.md  file-audit-2026-06-11.md  plan-audit-reverse.md  reverse-audit-report-2026-06-05.md
docs/assessment/: 2026-06-21-memory-system-architecture-review.md  2026-06-21-memory-system-honest-assessment.md  2026-06-21-project-assessment-and-review.md  2026-07-18-independent-codebase-assessment.md
docs/audits/: ADVERSARIAL_AUDIT.md  BIRDSEYE_AUDIT.md  COMPETITOR_COMPARISON.md  COMPLIANCE_AUDIT.md  FORWARD_AUDIT.md  KANBAN_DISCOVERY.md  KANBAN_FULL_BOARD_REVIEW.md  KANBAN_PHASE2_FORWARD_AUDIT.md  KANBAN_PHASE2_REVERSE_AUDIT.md  KANBAN_REVIEW_VALIDATION.md  MASTER_AUDIT_REPORT.md  (+3 more)
references/: dependency_graph.json  symbol_index.json
scripts/: large-sprint.py  sync-secrets.py  update_imports.py  worktree-worker.py
src/: __init__.py
tests/: conftest.py  test_agent_events.py  test_bus.py  test_bus_encoder.py  test_cli_memory.py  test_cli_preflight.py  test_cli_run.py  test_compaction.py  test_config.py  test_db_sessions.py  test_e2e_production.py  test_e2e_tui_features.py  test_graph.py  test_graph_nodes.py  test_hooks.py  test_image_input.py  test_math_utils.py  test_mcp_loading.py  test_memory.py  test_memory_contradiction.py  test_memory_cross_agent.py  test_memory_dream.py  test_memory_e2e.py  test_memory_extraction.py  test_memory_files.py  test_memory_index.py  test_memory_linking.py  test_memory_llm_extraction.py  test_memory_nats.py  test_memory_provenance.py  test_memory_rate_limit.py  test_memory_self_management.py  test_memory_tools.py  test_memory_ttl.py  test_memory_workspace_scoped.py  test_minimal.py  test_models.py  test_nats_durable.py  test_nats_spof.py  test_new_tools.py  (+26 more)
tmp/: changed_files_main.json  deterministic_findings.json  deterministic_findings_main.json
(+360 files in other folders)
