[project]
name = "nexusagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "deepagents",
    "nats-py",
    "pyyaml",
    "patch-ng",
    "fastapi",
    "uvicorn",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pydantic",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nexus-server = "nexusagent.server:run_server"
nexus-client = "nexusagent.cli:main"
nexus = "nexusagent.tui:main"
nexus-web = "nexusagent.web_ui:create_ui"
[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
