[project]
name = "nexusagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langgraph",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "deepagents",
    "nats-py",
    "pyyaml",
    "patch-ng",
    "fastapi",
    "uvicorn",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pydantic",
    "google-generativeai",
    "google-genai>=2.0.0,<2.3.0",
    "openai",
    "gradio",
    "textual",
    "cryptography",
    "httpx",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "sqlite-vec",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
nexus-server = "nexusagent.server:run"
nexus-client = "nexusagent.cli:main"
nexus = "nexusagent.tui:main"
nexus-web = "nexusagent.web_ui:run_ui"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["nexusagent"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
